slider images updated

--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                 <div class="swiper-wrapper">
                     <!--Slide Item-->
                     <div class="swiper-slide slide-item">
-                        <div class="image-layer" style="background-image: url(images/main-slider/slider-1.jpg);"></div>
+                        <div class="image-layer" style="background-image: url(images/main-slider/slider1.webp);"></div>
                         <div class="auto-container">
                           <div class="content-box">
                                 <div class="content">
@@ -335,7 +335,7 @@
                     </div>
                     <!--Slide Item-->
                     <div class="swiper-slide slide-item">
-                        <div class="image-layer" style="background-image: url(images/main-slider/slider-2.jpg);"></div>
+                        <div class="image-layer" style="background-image: url(images/main-slider/slider2.webp);"></div>
                         <div class="auto-container">
                           <div class="content-box">
                                 <div class="content">
@@ -355,7 +355,7 @@
                     </div>
                     <!--Slide Item-->
                     <div class="swiper-slide slide-item">
-                        <div class="image-layer" style="background-image: url(images/main-slider/slider-3.jpg);"></div>
+                        <div class="image-layer" style="background-image: url(images/main-slider/slider3.webp);"></div>
                         <div class="auto-container">
                           <div class="content-box">
                                 <div class="content">
