homepage menu updated

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>Restoria - Restaurants HTML Template - Home 01</title>
+<title>Bab Touma | Autentisk syrisk mat og opplevelse i hjertet av Oslo</title>
 <!-- Stylesheets -->
 <link href="css/bootstrap.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
@@ -28,14 +28,14 @@
                 <div class="animation-preloader">
                     <div class="spinner"></div>
                     <div class="txt-loading">
-                        <span data-text-preloader="R" class="letters-loading">
-                            R
+                        <span data-text-preloader="B" class="letters-loading">
+                            B
                         </span>
-                        <span data-text-preloader="E" class="letters-loading">
-                            E
+                        <span data-text-preloader="A" class="letters-loading">
+                            A
                         </span>
-                        <span data-text-preloader="S" class="letters-loading">
-                            S
+                        <span data-text-preloader="B" class="letters-loading">
+                            B
                         </span>
                         <span data-text-preloader="T" class="letters-loading">
                             T
@@ -43,11 +43,11 @@
                         <span data-text-preloader="O" class="letters-loading">
                             O
                         </span>
-                        <span data-text-preloader="R" class="letters-loading">
-                            R
+                        <span data-text-preloader="U" class="letters-loading">
+                            U
                         </span>
-                        <span data-text-preloader="I" class="letters-loading">
-                            I
+                        <span data-text-preloader="M" class="letters-loading">
+                            M
                         </span>
                         <span data-text-preloader="A" class="letters-loading">
                             A
@@ -66,14 +66,14 @@
                 <div class="inner clearfix">
                     <div class="top-left clearfix">
                         <ul class="top-info clearfix">
-                            <li><i class="icon far fa-map-marker-alt"></i> Restoria, Arrondissement, Paris 9578</li>
+                            <li><i class="icon far fa-map-marker-alt"></i> Thorvald Meyers gate 63, 0552 Oslo</li>
                             <li><i class="icon far fa-clock"></i> Daily : 8.00 am to 10.00 pm</li>
                         </ul>
                     </div>
                     <div class="top-right clearfix">
                         <ul class="top-info clearfix">
-                            <li><a href="tel:+11234567890"><i class="icon far fa-phone"></i> +1 123 456 7890</a></li>
-                            <li><a href="mailto:booking@restaurant.com"><i class="icon far fa-envelope"></i> booking@restaurant.com</a></li>
+                            <li><a href="tel:+4723456789"><i class="icon far fa-phone"></i> +47 234 56 789</a></li>
+                            <li><a href="mailto:info@babtoumabar.no"><i class="icon far fa-envelope"></i> info@babtoumabar.no</a></li>
                         </ul>
                     </div>
                 </div>
@@ -94,68 +94,9 @@
                         <div class="nav-outer clearfix">         
                             <nav class="main-menu">
                                 <ul class="navigation clearfix">
-                                    <li class="dropdown current"><a href="#">Home</a>
-                                        <ul>
-                                            <li><a href="#">Home One</a></li>
-                                            <li><a href="#">Home Two</a></li>
-                                            <li><a href="#">Home Three</a></li>
-                                            <li><a href="#">Home Four</a></li>
-                                        </ul>
-                                    </li>
-
-                                    <li class="dropdown has-mega-menu"><a href="menu-list.html">Menus</a>
-                                        <ul>
-                                            <li>
-                                                <div class="mega-menu">
-                                                    <div class="menu-inner">
-                                                        <div class="auto-container">
-                                                            <div class="row clearfix">
-                                                                <div class="menu-block col-lg-3 col-md-6 col-sm-6">
-                                                                    <div class="image"><a href="menu-list-1.html"><img src="images/resource/menu-1-thumb.jpg" alt="image"></a></div>
-                                                                    <div class="title"><a href="menu-list-1.html">Menu list 1</a></div>
-                                                                </div>
-                                                                <div class="menu-block col-lg-3 col-md-6 col-sm-6">
-                                                                    <div class="image"><a href="menu-list-2.html"><img src="images/resource/menu-2-thumb.jpg" alt="image"></a></div>
-                                                                    <div class="title"><a href="menu-list-2.html">Menu list 2</a></div>
-                                                                </div>
-                                                                <div class="menu-block col-lg-3 col-md-6 col-sm-6">
-                                                                    <div class="image"><a href="menu-list-3.html"><img src="images/resource/menu-3-thumb.jpg" alt="image"></a></div>
-                                                                    <div class="title"><a href="menu-list-3.html">Menu list 3</a></div>
-                                                                </div>
-                                                                <div class="menu-block col-lg-3 col-md-6 col-sm-6">
-                                                                    <div class="image"><a href="menu-list-4.html"><img src="images/resource/menu-4-thumb.jpg" alt="image"></a></div>
-                                                                    <div class="title"><a href="menu-list-4.html">Menu list 4</a></div>
-                                                                </div>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="about.html">About Us</a></li>
-                                    <li><a href="our-chef.html">Our chefs</a></li>
-                                    <li class="dropdown"><a href="#">Pages</a>
-                                        <ul>
-                                            <li><a href="gallery-masonry.html">Photo Gallery</a></li>
-                                            <li><a href="book-table.html">Reservation 1</a></li>
-                                            <li><a href="book-table-option2.html">Reservation 2</a></li>
-                                            <li><a href="testimonial.html">Testimonial</a></li>
-                                            <li><a href="blog-list.html">Blog List</a></li>
-                                            <li><a href="blog-single-post.html">Blog Single Post</a></li>
-                                            <li><a href="#">Dropdown Menu 1</a></li>
-                                            <li><a href="#">Dropdown Lorem 2</a></li>
-                                            <li class="dropdown"><a href="#">Dropdown Menu 3</a>
-                                                <ul>
-                                                    <li><a href="#">Dropdown Menu level 2</a></li>
-                                                    <li><a href="#">Dropdown Menu level 2</a></li>
-                                                    <li><a href="#">Dropdown Menu Level 2</a></li>
-                                                </ul>
-                                            </li>
-                                            
-                                        </ul>
-                                    </li>
-                                    <li><a href="contact-us.html">Contact</a></li>
+                                    <li><a href="index.html">Hjem</a></li>
+                                    <li><a href="index.html">Meny</a></li>
+                                    <li><a href="index.html">Kontakt Oss</a></li>
                                 </ul>
                             </nav>
                             <!-- Main Menu End-->
