--- a/contact-us.html
+++ b/contact-us.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>Restoria - Restaurants HTML Template - Menus List</title>
+<title>Bab Touma | Autentisk syrisk mat og opplevelse i hjertet av Oslo</title>
 <!-- Stylesheets -->
 <link href="css/bootstrap.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
