--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <div class="main-box clearfix">
                     <!--Logo-->
                     <div class="logo-box">
-                         <div class="logo"><a href="index.html" title="Restoria - Restaurants HTML Template"><img src="images/logo.png" alt="image" title="Restoria - Restaurants HTML Template"></a></div>
+                         <div class="logo"><a href="index.html" title="Bab Touma | Autentisk syrisk mat og opplevelse i hjertet av Oslo"><img src="images/logo.webp" alt="logo" title="Bab Touma | Autentisk syrisk mat og opplevelse i hjertet av Oslo"></a></div>
                     </div>
 
                     <div class="nav-box clearfix">
