footer credit updated

--- a/index.html
+++ b/index.html
@@ -1190,7 +1190,7 @@
                                   </div>
 
                                   <div class="col-lg-4 col-md-4 col-sm-12">
-                                      <p class="developer_text">Crafted by <a href="https://themeforest.net/user/kalanidhithemes/portfolio" target="blank">Kalanidhi Themes</a></p>
+                                      <p class="developer_text">Copyright  2026 Bab Touma - Powered by <a href="https://eat-now.no/" target="blank">Eat-Now.no</a></p>
                                   </div>
                                 </div>
                               <!-- row end -->
