html pages added

--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
                             <nav class="main-menu">
                                 <ul class="navigation clearfix">
                                     <li><a href="index.html">Hjem</a></li>
-                                    <li><a href="index.html">Meny</a></li>
-                                    <li><a href="index.html">Kontakt Oss</a></li>
+                                    <li><a href="meny.html">Meny</a></li>
+                                    <li><a href="kontakt.html">Kontakt Oss</a></li>
                                 </ul>
                             </nav>
                             <!-- Main Menu End-->
