book table change

--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
 
                         <div class="links-box clearfix">
                             <div class="link link-btn">
-                                <a href="book-table.html" class="theme-btn btn-style-one clearfix">
+                                <a href="meny.html" class="theme-btn btn-style-one clearfix">
                                     <span class="btn-wrap">
-                                        <span class="text-one">book a table</span>
-                                        <span class="text-two">book a table</span>
+                                        <span class="text-one">Se Meny Her</span>
+                                        <span class="text-two">Se Meny Her</span>
                                     </span>
                                 </a>
                             </div>
@@ -150,49 +150,14 @@
         <!-- Hidden Bar Wrapper -->
         <div class="inner-box">
             <div class="cross-icon hidden-bar-closer"><span class="far fa-close"></span></div>
-            <div class="logo-box"><a href="index.html" title="Restoria - Restaurants HTML Template"><img src="images/resource/sidebar-logo.png" alt="image" title="Restoria - Restaurants HTML Template"></a></div>
+            <div class="logo-box"><a href="index.html" title="Bab Touma | Autentisk syrisk mat og opplevelse i hjertet av Oslo"><img src="images/logo.webp" alt="image" title="Bab Touma | Autentisk syrisk mat og opplevelse i hjertet av Oslo"></a></div>
             
             <!-- .Side-menu -->
             <div class="side-menu">
                  <ul class="navigation clearfix">
-                    <li class="dropdown"><a href="#">Home</a>
-                        <ul>
-                            <li><a href="#">Home One</a></li>
-                            <li><a href="#">Home Two</a></li>
-                            <li><a href="#">Home Three</a></li>
-                            <li><a href="#">Home Four</a></li>
-                        </ul>
-                    </li>
-                    <li class="dropdown"><a href="menu-list-1.html">Menus</a>
-                        <ul>
-                            <li><a href="menu-list-1.html">Menu List 1</a></li>
-                            <li><a href="menu-list-2.html">Menu List 2</a></li>
-                            <li><a href="menu-list-3.html">Menu List 3</a></li>
-                            <li><a href="menu-list-4.html">Menu List 4</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="about.html">About Us</a></li>
-                    <li><a href="our-chef.html">Our chefs</a></li>
-                    <li class="dropdown"><a href="#">Pages</a>
-                        <ul>
-                            <li><a href="gallery-masonry.html">Photo Gallery</a></li>
-                            <li><a href="book-table.html">Reservation 1</a></li>
-                            <li><a href="book-table-option2.html">Reservation 2</a></li>
-                            <li><a href="testimonial.html">Testimonial</a></li>
-                            <li><a href="blog-list.html">Blog List</a></li>
-                            <li><a href="blog-single-post.html">Blog Single Post</a></li>
-                            <li><a href="#">Dropdown Menu 1</a></li>
-                            <li><a href="#">Dropdown Lorem 2</a></li>
-                            <li class="dropdown"><a href="#">Dropdown Menu 3</a>
-                                <ul>
-                                    <li><a href="#">Dropdown Menu level 2</a></li>
-                                    <li><a href="#">Dropdown Menu level 2</a></li>
-                                    <li><a href="#">Dropdown Menu Level 2</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </li>
-                    <li><a href="contact-us.html">Contact</a></li>
+                    <li><a href="index.html">Hjem</a> </li>
+                    <li><a href="meny.html">Meny</a> </li>
+                    <li><a href="kontakt.html">Kontakt</a> </li>
                 </ul>
             </div><!-- /.Side-menu -->
         
@@ -207,14 +172,23 @@
     <section class="info-bar">
         <div class="inner-box">
             <div class="cross-icon"><span class="far fa-close"></span></div>
-            <div class="image-box"><img src="images/resource/sidebar-image.jpg" alt="image" title=""></div>
-            <div class="logo-box"><a href="index.html" title="Restoria - Restaurants HTML Template"><img src="images/resource/sidebar-logo.png" alt="image" title="Restoria - Restaurants HTML Template"></a></div>
+            <!-- <div class="image-box"><img src="images/resource/sidebar-image.jpg" alt="image" title=""></div> -->
+            <div class="logo-box"><a href="index.html" title="Bab Touma | Autentisk syrisk mat og opplevelse i hjertet av Oslo"><img src="images/logo.webp" alt="image" title="Bab Touma | Autentisk syrisk mat og opplevelse i hjertet av Oslo"></a></div>
 
-            <h5>Visit Us</h5>
+            <h5>Besøk oss</h5>
             <ul class="info">
-                <li>Restoria, Arrondissement, <br> Paris 9578</li>
-                <li> <span class="ib-ttl"> Lunch Time </span>- 10.00 am – 3:30 pm </li>
-                <li><span class="ib-ttl"> Dinner Time</span> - 08.00 pm – 10:30 pm</li>
+                <li>Thorvald Meyers gate 63 </br> 0552 Oslo</li>
+                <h5>ÅPNINGSTIDER</h5>
+                <li><span class="ib-ttl">Bar</span></li>
+                <li>Tirs–Tors: 15:00–01:00</li>
+                <li>Fre: 15:00–03:30</li>
+                <li>Lør: 13:00–03:30</li>
+                <li>Søn: 13:00–01:00</li>
+                <li><span class="ib-ttl">Kjøkken</span></li>
+                <li>Tirs–Tors: 15:00–22:00</li>
+                <li>Fre: 15:00–22:00</li>
+                <li>Lør: 13:00–22:00</li>
+                <li>Søn: 13:00–22:00</li>
                 <li><a href="mailto:booking@domainame.com">booking@domainame.com</a></li>
             </ul>
             <div class="booking-info">
