--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         <div class="inner-box">
             <div class="cross-icon"><span class="far fa-close"></span></div>
             <!-- <div class="image-box"><img src="images/resource/sidebar-image.jpg" alt="image" title=""></div> -->
-            <div class="logo-box"><a href="index.html" title="Bab Touma | Autentisk syrisk mat og opplevelse i hjertet av Oslo"><img src="images/logo.webp" alt="image" title="Bab Touma | Autentisk syrisk mat og opplevelse i hjertet av Oslo"></a></div>
+            <div><a href="index.html" title="Bab Touma | Autentisk syrisk mat og opplevelse i hjertet av Oslo"><img src="images/logo.webp" style="alt:image" title="Bab Touma | Autentisk syrisk mat og opplevelse i hjertet av Oslo"></a></div>
 
             <h5>Besøk oss</h5>
             <ul class="info">
@@ -189,7 +189,6 @@
                 <li>Fre: 15:00–22:00</li>
                 <li>Lør: 13:00–22:00</li>
                 <li>Søn: 13:00–22:00</li>
-                <li><a href="mailto:booking@domainame.com">booking@domainame.com</a></li>
             </ul>
             <div class="booking-info">
                 <div class="bk-no"><a href="tel:+47-402-90-979">Ring oss: +47 402 90 979</a></div>
