logo contact fixed

--- a/kontakt.html
+++ b/kontakt.html
@@ -224,7 +224,7 @@
                 <!--form image Section-->
                 <div class="loc-block info-block col-lg-5 col-md-12 col-sm-12">
                     <div class="contact-image">
-                        <img src="images/resource/restaurant.jpg" alt="image">
+                        <img src="images/logo.webp" alt="image">
                     </div>
                     <h5> visit us </h5>
                     <div class="text">
