--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
     <section class="menu-cat section-kt">
         <div class="auto-container">
             <div class="title-box centered">
-                <div class="subtitle"><span>explore our Delicious Selections</span></div>
+                <div class="subtitle"><span>Utforsk vårt deilige utvalg</span></div>
             </div>
 
             <div class="row clearfix">
@@ -413,7 +413,7 @@
                         <!-- vertical title -->
                         <div class="title-wrapper">
                             <div class="title-box special-title">
-                                <h2>Special Dishes </h2>
+                                <h2>Våre spesialiteter </h2>
                             </div>
                         </div>
                         <!--Special Offer Slider Section-->
@@ -480,7 +480,7 @@
         <div class="auto-container">
             <div class="title-box centered">
                 <div class="title-badge"> <img src="images/resource/menu-title-badge.svg" alt="image" title="image"> </div>
-                <h2>Delicious Menu</h2>
+                <h2>Signaturmenyer</h2>
             </div>
 
             <div class="tabs-box menu-tabs">
@@ -681,7 +681,8 @@
             </div>
 
             <div class="open-timing">
-                <div class="hours">During winter daily from <span class="theme_color">7:00 pm</span> to <span class="theme_color">9:00 pm</span></div>
+            </br>
+                <!-- <div class="hours">During winter daily from <span class="theme_color">7:00 pm</span> to <span class="theme_color">9:00 pm</span></div> -->
                 <div class="link-box">
                     <a href="menu-list-1.html" class="theme-btn btn-style-two clearfix">
                         <span class="btn-wrap">
