--- a/kontakt.html
+++ b/kontakt.html
@@ -244,12 +244,12 @@
                             <div class="subtitle"><span><h3>ÅPNINGSTIDER</h3></span></div>
                             <div class="text desc">
                                 <ul>
-                                                    <li><span class="ib-ttl">Bar</span></li>
+                                                    <li><span style="color: var(--main-color);">Bar</span></li>
                 <li>Tirs–Tors: 15:00–01:00</li>
                 <li>Fre: 15:00–03:30</li>
                 <li>Lør: 13:00–03:30</li>
                 <li>Søn: 13:00–01:00</li>
-                <li><span class="ib-ttl">Kjøkken</span></li>
+                <li><span style="color: var(--main-color);">Kjøkken</span></li>
                 <li>Tirs–Tors: 15:00–22:00</li>
                 <li>Fre: 15:00–22:00</li>
                 <li>Lør: 13:00–22:00</li>
