why section updated

--- a/index.html
+++ b/index.html
@@ -699,8 +699,8 @@
     <section class="why-us-two section-kt">
         <div class="auto-container">
             <div class="title-box centered">
-                <div class="subtitle"><span>why choose us</span></div>
-                <h2>Why Dine With Us</h2>
+                <div class="subtitle"><span>Hvorfor velge oss</span></div>
+                <h2>Hvorfor spise hos oss</h2>
             </div>
             <div class="row clearfix">
                 <!--Block-->
@@ -708,7 +708,7 @@
                     <div class="inner-box wow fadeInUp" data-wow-duration="1500ms" data-wow-delay="0ms">
                         <div class="image-box"><img src="images/resource/why1.jpg" alt=""></div>
                         <div class="over-box">
-                            <h6>skilled chef</h6>
+                            <h6>Dyktige kokker</h6>
                         </div>
                     </div>
                 </div>
@@ -718,7 +718,7 @@
                     <div class="inner-box wow fadeInUp" data-wow-duration="1500ms" data-wow-delay="300ms">
                         <div class="image-box"><img src="images/resource/why2.jpg" alt=""></div>
                         <div class="over-box">
-                            <h6>hygienic food</h6>
+                            <h6>Hygienisk mat</h6>
                         </div>
                     </div>
                 </div>
@@ -728,7 +728,7 @@
                     <div class="inner-box wow fadeInUp" data-wow-duration="1500ms" data-wow-delay="600ms">
                         <div class="image-box"><img src="images/resource/why3.jpg" alt=""></div>
                         <div class="over-box">
-                            <h6>Fresh ambience</h6>
+                            <h6>Frisk atmosfære</h6>
                         </div>
                     </div>
                 </div>
@@ -738,7 +738,7 @@
                     <div class="inner-box wow fadeInUp" data-wow-duration="1500ms" data-wow-delay="900ms">
                         <div class="image-box"><img src="images/resource/why4.jpg" alt=""></div>
                         <div class="over-box">
-                            <h6>secreat recipe</h6>
+                            <h6>Hemmelig oppskrift</h6>
                         </div>
                     </div>
                 </div>
@@ -749,30 +749,30 @@
                 <div class="row clearfix">
                     <div class="fact-block col-lg-3 col-md-6 col-sm-6 col-xs-12">
                         <div class="inner clearfix">
-                            <div class="fact-count"><div class="count-box"><span class="count-text" data-stop="60" data-speed="2000">0</span><i>+</i></div></div>
-                            <div class="fact-title">monthly visitors</div>
-                            <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry has been. </p>
+                            <!-- <div class="fact-count"><div class="count-box"><span class="count-text" data-stop="60" data-speed="2000">0</span><i>+</i></div></div> -->
+                            <!-- <div class="fact-title">månedlige besøkende</div> -->
+                            <p> Våre dyktige kokker har lang erfaring og lidenskap for matlaging. Hver rett tilberedes med presisjon, kvalitet og ekte smak. </p>
                         </div>
                     </div>
                     <div class="fact-block col-lg-3 col-md-6 col-sm-6 col-xs-12">
                         <div class="inner clearfix">
-                            <div class="fact-count"><div class="count-box"><span class="count-text" data-stop="22" data-speed="1500">0</span><i>+</i></div></div>
-                            <div class="fact-title">positive reviews</div>
-                            <p> Simply dummy text of the printing and typesetting industry lorem Ipsum has been. </p>
+                            <!-- <div class="fact-count"><div class="count-box"><span class="count-text" data-stop="22" data-speed="1500">0</span><i>+</i></div></div> -->
+                            <!-- <div class="fact-title">positive anmeldelser</div> -->
+                            <p> Vi følger strenge hygienerutiner for å sikre trygg og hygienisk mat. Renhet og kvalitet er alltid vår høyeste prioritet.</p>
                         </div>
                     </div>
                     <div class="fact-block col-lg-3 col-md-6 col-sm-6 col-xs-12">
                         <div class="inner clearfix">
-                            <div class="fact-count"><div class="count-box"><span class="count-text" data-stop="135" data-speed="1000">0</span><i>+</i></div></div>
-                            <div class="fact-title">secreat recipe</div>
-                            <p> Simply dummy text of the printing and typesetting lorem Ipsum has been industry. </p>
+                            <!-- <div class="fact-count"><div class="count-box"><span class="count-text" data-stop="135" data-speed="1000">0</span><i>+</i></div></div> -->
+                            <!-- <div class="fact-title">hemmelig oppskrift</div> -->
+                            <p> Vår restaurant tilbyr en frisk, ren og innbydende atmosfære hvor du kan slappe av og nyte måltidet ditt. </p>
                         </div>
                     </div>
                     <div class="fact-block col-lg-3 col-md-6 col-sm-6 col-xs-12">
                         <div class="inner clearfix">
-                            <div class="fact-count"><div class="count-box"><span class="count-text" data-stop="10" data-speed="1000">0</span><i>+</i></div></div>
-                            <div class="fact-title">award & honnors</div>
-                            <p> Ipsum is simply dummy text of the printing and typesetting industry lorem Ipsum. </p>
+                            <!-- <div class="fact-count"><div class="count-box"><span class="count-text" data-stop="10" data-speed="1000">0</span><i>+</i></div></div> -->
+                            <!-- <div class="fact-title">pris og utmerkelser</div> -->
+                            <p> Våre retter er laget med unike og hemmelige oppskrifter som gir en smak du ikke finner andre steder. </p>
                         </div>
                     </div>
                 </div>
@@ -788,9 +788,9 @@
                     <div class="reserv-col col-lg-6 col-md-12 col-sm-12">
                         <div class="inner">
                             <div class="title-box centered">
-                                <div class="subtitle"><span>Online reservation</span></div>
-                                <h2>Book A Table</h2>
-                                <div class="request-info">Ring oss <a href="tel:+47-402-90-979">+47 402 90 979</a> or fill out the order form</div>
+                                <div class="subtitle"><span>Online reservasjon</span></div>
+                                <h2>Book et bord</h2>
+                                <div class="request-info">Ring oss <a href="tel:+47-402-90-979">+47 402 90 979</a> eller fyll ut bestillingsskjemaet</div>
                             </div>
                             <div class="default-form reservation-form">
                                 <form method="post" action="index.html">
