--- a/index.html
+++ b/index.html
@@ -471,225 +471,7 @@
     <!--Fluid Section-->
   
 
-    <!--Menu Tab Section-->
-    <section class="menu-section section-kt">
-        <div class="auto-container">
-            <div class="title-box centered">
-                <div class="title-badge"> <img src="images/resource/menu-title-badge.svg" alt="image" title="image"> </div>
-                <h2>Signaturmenyer</h2>
-            </div>
-
-            <div class="tabs-box menu-tabs">
-                <div class="buttons">
-                    <ul class="tab-buttons clearfix">
-                        <li class="tab-btn active-btn" data-tab="#tab-1"><span>Starter</span></li>
-                        <li class="tab-btn" data-tab="#tab-2"><span>Main Dishes</span></li>
-                        <li class="tab-btn" data-tab="#tab-3"><span>Desserts</span></li>
-                        <li class="tab-btn" data-tab="#tab-4"><span>WINES</span></li>
-                    </ul>
-                </div>
-                <div class="tabs-content">
-                    <!--Tab-->
-                    <div class="tab active-tab" id="tab-1">
-                        <div class="row clearfix">
-                            <div class="menu-col col-lg-6 col-md-12 col-sm-12">
-                                <div class="inner">
-                                    <!--Block-->
-                                    <div class="dish-block">
-                                        <div class="inner-box">
-                                            <div class="dish-image"><a href="#"><img src="images/resource/menu-image-1.png" alt="image"></a></div>
-                                            <div class="title clearfix"><div class="ttl clearfix"><h6><a href="#">Stuffed Mushrooms</a></h6></div> <span class="menu-list-line"> </span> <div class="price"><span>$25.50</span></div></div>
-                                            <div class="text desc"><a href="#">flavorful, filled with panko bread crumbs, pine nuts, parsley, sun-dried tomatoes, and cheese.</a></div>
-                                        </div>
-                                    </div>
-                                    <!--Block-->
-                                    <div class="dish-block">
-                                        <div class="inner-box">
-                                            <div class="dish-image"><a href="#"><img src="images/resource/menu-image-2.png" alt="image"></a></div>
-                                            <div class="title clearfix"><div class="ttl clearfix"><h6><a href="#">Jalapeno Poppers <span class="s-info">New</span></a></h6></div> <span class="menu-list-line"> </span> <div class="price"><span>$40.00</span></div></div>
-                                            <div class="text desc"><a href="#">Greek yogurt filling instead of a traditional cream cheese one.</a></div>
-                                        </div>
-                                    </div>
-                                    <!--Block-->
-                                    <div class="dish-block">
-                                        <div class="inner-box">
-                                            <div class="dish-image"><a href="#"><img src="images/resource/menu-image-3.png" alt="image"></a></div>
-                                            <div class="title clearfix"><div class="ttl clearfix"><h6><a href="#">Caprese Skewers</a></h6></div> <span class="menu-list-line"> </span> <div class="price"><span>$10.00</span></div></div>
-                                            <div class="text desc"><a href="#">Drizzle these colorful skewers with an easy balsamic for a pop of sweet flavor.</a></div>
-                                        </div>
-                                    </div>
-                                    <!--Block-->
-                                    <div class="dish-block">
-                                        <div class="inner-box">
-                                            <div class="dish-image"><a href="#"><img src="images/resource/menu-image-4.png" alt="image"></a></div>
-                                            <div class="title clearfix"><div class="ttl clearfix"><h6><a href="#">Greek Salad</a></h6></div> <span class="menu-list-line"> </span> <div class="price"><span>$10.00</span></div></div>
-                                            <div class="text desc"><a href="#">Tomatoes, green bell pepper, sliced cucumber onion, olives, and feta cheese.</a></div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="menu-col img-col col-lg-6 col-md-12 col-sm-12">
-                                <div class="inner">
-                                    <div class="image"><img src="images/resource/menus-1.jpg" alt="image"></div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!--Tab-->
-                    <div class="tab" id="tab-2">
-                        <div class="row clearfix">
-                            <div class="menu-col col-lg-6 col-md-12 col-sm-12">
-                                <div class="inner">
-                                    <!--Block-->
-                                    <div class="dish-block">
-                                        <div class="inner-box">
-                                            <div class="dish-image"><a href="#"><img src="images/resource/menu-image-5.png" alt="image"></a></div>
-                                            <div class="title clearfix"><div class="ttl clearfix"><h6><a href="#">Greek Salad</a></h6></div> <span class="menu-list-line"> </span> <div class="price"><span>$25.50</span></div></div>
-                                            <div class="text desc"><a href="#">Tomatoes, green bell pepper, sliced cucumber onion, olives, and feta cheese.</a></div>
-                                        </div>
-                                    </div>
-                                    <!--Block-->
-                                    <div class="dish-block">
-                                        <div class="inner-box">
-                                            <div class="dish-image"><a href="#"><img src="images/resource/menu-image-6.png" alt="image"></a></div>
-                                            <div class="title clearfix"><div class="ttl clearfix"><h6><a href="#">Lasagne <span class="s-info">SEASONAL</span></a></h6></div> <span class="menu-list-line"> </span> <div class="price"><span>$40.00</span></div></div>
-                                            <div class="text desc"><a href="#">Vegetables, cheeses, ground meats, tomato sauce, seasonings and spices</a></div>
-                                        </div>
-                                    </div>
-                                    <!--Block-->
-                                    <div class="dish-block">
-                                        <div class="inner-box">
-                                            <div class="dish-image"><a href="#"><img src="images/resource/menu-image-7.png" alt="image"></a></div>
-                                            <div class="title clearfix"><div class="ttl clearfix"><h6><a href="#">Butternut Pumpkin</a></h6></div> <span class="menu-list-line"> </span>  <div class="price"><span>$10.00</span></div></div>
-                                            <div class="text desc"><a href="#">Typesetting industry lorem Lorem Ipsum is simply dummy text of the priand.</a></div>
-                                        </div>
-                                    </div>
-                                    <!--Block-->
-                                    <div class="dish-block">
-                                        <div class="inner-box">
-                                            <div class="dish-image"><a href="#"><img src="images/resource/menu-image-8.png" alt="image"></a></div>
-                                            <div class="title clearfix"><div class="ttl clearfix"><h6><a href="#">Butternut Pumpkin</a></h6></div> <span class="menu-list-line"> </span>  <div class="price"><span>$10.00</span></div></div>
-                                            <div class="text desc"><a href="#">Typesetting industry lorem Lorem Ipsum is simply dummy text of the priand.</a></div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="menu-col img-col col-lg-6 col-md-12 col-sm-12">
-                                <div class="inner">
-                                    <div class="image"><img src="images/resource/menus-2.jpg" alt="image"></div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!--Tab-->
-                    <div class="tab" id="tab-3">
-                        <div class="row clearfix">
-                            <div class="menu-col col-lg-6 col-md-12 col-sm-12">
-                                <div class="inner">
-                                    <!--Block-->
-                                    <div class="dish-block">
-                                        <div class="inner-box">
-                                            <div class="dish-image"><a href="#"><img src="images/resource/menu-image-9.png" alt="image"></a></div>
-                                            <div class="title clearfix"><div class="ttl clearfix"><h6><a href="#">Chocolate mousse</a></h6></div> <span class="menu-list-line"> </span>  <div class="price"><span>$25.50</span></div></div>
-                                            <div class="text desc"><a href="#">Tomatoes, green bell pepper, sliced cucumber onion, olives, and feta cheese.</a></div>
-                                        </div>
-                                    </div>
-                                    <!--Block-->
-                                    <div class="dish-block">
-                                        <div class="inner-box">
-                                            <div class="dish-image"><a href="#"><img src="images/resource/menu-image-10.png" alt="image"></a></div>
-                                            <div class="title clearfix"><div class="ttl clearfix"><h6><a href="#">Pavlova <span class="s-info">new</span></a></h6></div> <span class="menu-list-line"> </span>  <div class="price"><span>$40.00</span></div></div>
-                                            <div class="text desc"><a href="#">Vegetables, cheeses, ground meats, tomato sauce, seasonings and spices</a></div>
-                                        </div>
-                                    </div>
-                                    <!--Block-->
-                                    <div class="dish-block">
-                                        <div class="inner-box">
-                                            <div class="dish-image"><a href="#"><img src="images/resource/menu-image-11.png" alt="image"></a></div>
-                                            <div class="title clearfix"><div class="ttl clearfix"><h6><a href="#">Apple crumble</a></h6></div> <span class="menu-list-line"> </span>  <div class="price"><span>$10.00</span></div></div>
-                                            <div class="text desc"><a href="#">Typesetting industry lorem Lorem Ipsum is simply dummy text of the priand.</a></div>
-                                        </div>
-                                    </div>
-                                    <!--Block-->
-                                    <div class="dish-block">
-                                        <div class="inner-box">
-                                            <div class="dish-image"><a href="#"><img src="images/resource/menu-image-12.png" alt="image"></a></div>
-                                            <div class="title clearfix"><div class="ttl clearfix"><h6><a href="#">Crème BrUlEe</a></h6></div> <span class="menu-list-line"> </span>  <div class="price"><span>$10.00</span></div></div>
-                                            <div class="text desc"><a href="#">Typesetting industry lorem Lorem Ipsum is simply dummy text of the priand.</a></div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="menu-col img-col col-lg-6 col-md-12 col-sm-12">
-                                <div class="inner">
-                                    <div class="image"><img src="images/resource/menus-desert.jpg" alt="image"></div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!--Tab-->
-                    <div class="tab" id="tab-4">
-                        <div class="row clearfix">
-                            <div class="menu-col col-lg-6 col-md-12 col-sm-12">
-                                <div class="inner">
-                                    <!--Block-->
-                                    <div class="dish-block">
-                                        <div class="inner-box">
-                                            <div class="dish-image"><a href="#"><img src="images/resource/drink-1.png" alt="image"></a></div>
-                                            <div class="title clearfix"><div class="ttl clearfix"><h6><a href="#">Black Wine</a></h6></div> <span class="menu-list-line"> </span>  <div class="price"><span>$25.50</span></div></div>
-                                            <div class="text desc"><a href="#">Tomatoes, green bell pepper, sliced cucumber onion, olives, and feta cheese.</a></div>
-                                        </div>
-                                    </div>
-                                    <!--Block-->
-                                    <div class="dish-block">
-                                        <div class="inner-box">
-                                            <div class="dish-image"><a href="#"><img src="images/resource/drink-2.png" alt="image"></a></div>
-                                            <div class="title clearfix"><div class="ttl clearfix"><h6><a href="#">La Marca <span class="s-info">SEASONAL</span></a></h6></div> <span class="menu-list-line"> </span>  <div class="price"><span>$40.00</span></div></div>
-                                            <div class="text desc"><a href="#">Vegetables, cheeses, ground meats, tomato sauce, seasonings and spices</a></div>
-                                        </div>
-                                    </div>
-                                    <!--Block-->
-                                    <div class="dish-block">
-                                        <div class="inner-box">
-                                            <div class="dish-image"><a href="#"><img src="images/resource/drink-3.png" alt="image"></a></div>
-                                            <div class="title clearfix"><div class="ttl clearfix"><h6><a href="#">Crawford Sauvignon</a></h6></div> <span class="menu-list-line"> </span>  <div class="price"><span>$10.00</span></div></div>
-                                            <div class="text desc"><a href="#">Typesetting industry lorem Lorem Ipsum is simply dummy text of the priand.</a></div>
-                                        </div>
-                                    </div>
-                                    <!--Block-->
-                                    <div class="dish-block">
-                                        <div class="inner-box">
-                                            <div class="dish-image"><a href="#"><img src="images/resource/drink-4.png" alt="image"></a></div>
-                                            <div class="title clearfix"><div class="ttl clearfix"><h6><a href="#">Vineyard Cabernet</a></h6></div> <span class="menu-list-line"> </span>  <div class="price"><span>$10.00</span></div></div>
-                                            <div class="text desc"><a href="#">Typesetting industry lorem Lorem Ipsum is simply dummy text of the priand.</a></div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="menu-col img-col col-lg-6 col-md-12 col-sm-12">
-                                <div class="inner">
-                                    <div class="image"><img src="images/resource/menus-wine.jpg" alt="image"></div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="open-timing">
-            </br>
-                <!-- <div class="hours">During winter daily from <span class="theme_color">7:00 pm</span> to <span class="theme_color">9:00 pm</span></div> -->
-                <div class="link-box">
-                    <a href="menu-list-1.html" class="theme-btn btn-style-two clearfix">
-                        <span class="btn-wrap">
-                            <span class="text-one">view all menu</span>
-                            <span class="text-two">view all menu</span>
-                        </span>
-                    </a>
-                </div>
-            </div>
-        </div>
-    </section>
+   
 
     <!--Why Us Section-->
     <section class="why-us-two section-kt">
@@ -741,7 +523,7 @@
 
             </div>
 
-            <div class="fact-counter">
+            <div class="fact-counter mt-0">
                 <div class="row clearfix">
                     <div class="fact-block col-lg-3 col-md-6 col-sm-6 col-xs-12">
                         <div class="inner clearfix">
