fb images changed

--- a/index.html
+++ b/index.html
@@ -674,25 +674,25 @@
                 <!--Block-->
                 <div class="ig-post-block col-lg-3 col-md-6 col-sm-6 col-xs-12">
                     <div class="ig-post-image wow fadeInUp" data-wow-duration="1500ms" data-wow-delay="0ms">
-                        <a href="#"><img src="images/resource/insta1.jpg" alt="image"></a>
+                        <a href="#"><img src="images/resource/fb1.jpg" alt="image"></a>
                     </div>
                 </div>
                 <!--Block-->
                 <div class="ig-post-block col-lg-3 col-md-6 col-sm-6 col-xs-12">
                     <div class="ig-post-image wow fadeInUp" data-wow-duration="1500ms" data-wow-delay="0ms">
-                        <a href="#"><img src="images/resource/insta2.jpg" alt="image"></a>
+                        <a href="#"><img src="images/resource/fb2.jpg" alt="image"></a>
                     </div>
                 </div>
                 <!--Block-->
                 <div class="ig-post-block col-lg-3 col-md-6 col-sm-6 col-xs-12">
                     <div class="ig-post-image wow fadeInUp" data-wow-duration="1500ms" data-wow-delay="0ms">
-                        <a href="#"><img src="images/resource/insta3.jpg" alt="image"></a>
+                        <a href="#"><img src="images/resource/fb3.jpg" alt="image"></a>
                     </div>
                 </div>
                 <!--Block-->
                 <div class="ig-post-block col-lg-3 col-md-6 col-sm-6 col-xs-12">
                     <div class="ig-post-image wow fadeInUp" data-wow-duration="1500ms" data-wow-delay="0ms">
-                        <a href="#"><img src="images/resource/insta4.jpg" alt="image"></a>
+                        <a href="#"><img src="images/resource/fb4.jpg" alt="image"></a>
                     </div>
                 </div>
 
