--- a/kontakt.html
+++ b/kontakt.html
@@ -86,7 +86,7 @@
                 <div class="main-box clearfix">
                     <!--Logo-->
                     <div class="logo-box">
-                         <div class="logo"><a href="index.html" title="Bab Touma | Autentisk syrisk mat og opplevelse i hjertet av Oslo"><img src="images/logo.webp" alt="logo" title="Bab Touma | Autentisk syrisk mat og opplevelse i hjertet av Oslo"></a></div>
+                         <div class="logo"><a href="index.html" title="Bab Touma | Autentisk syrisk mat og opplevelse i hjertet av Oslo"><img src="images/logo_color.webp" alt="logo" title="Bab Touma | Autentisk syrisk mat og opplevelse i hjertet av Oslo"></a></div>
                     </div>
 
                     <div class="nav-box clearfix">
@@ -244,16 +244,13 @@
                             <div class="subtitle"><span><h3>ÅPNINGSTIDER</h3></span></div>
                             <div class="text desc">
                                 <ul>
-                                                    <li><span style="color: var(--main-color);">Bar</span></li>
-                <li>Tirs–Tors: 15:00–01:00</li>
-                <li>Fre: 15:00–03:30</li>
-                <li>Lør: 13:00–03:30</li>
-                <li>Søn: 13:00–01:00</li>
-                <li><span style="color: var(--main-color);">Kjøkken</span></li>
-                <li>Tirs–Tors: 15:00–22:00</li>
-                <li>Fre: 15:00–22:00</li>
-                <li>Lør: 13:00–22:00</li>
-                <li>Søn: 13:00–22:00</li>
+                               <li>Mandag : STENGT</li> 
+                                <li>Tirsdag:15:00 – 01:00</li>
+                                <li>Onsdag:	15:00 – 01:00</li>
+                                <li>Torsdag:15:00 – 03:30</li>
+                                <li>Fredag:	15:00 – 03:30</li>
+                                <li>Lørdag:	13:00 – 03:30</li>
+                                <li>Søndag:	15:00 – 01:00</li>
                                 </ul>
                             
                             </div>
