special item image updated

--- a/index.html
+++ b/index.html
@@ -391,8 +391,8 @@
                 <!--Col-->
                 <div class="image-col col-xl-6 col-lg-6 col-md-12 col-sm-12">
                     <div class="inner wow fadeInLeft" data-wow-duration="1500ms" data-wow-delay="0ms">
-                        <div class="image-layer" style="background-image: url(images/background/image-6.jpg);"></div>
-                        <div class="image"><img src="images/background/image-6.jpg" alt="image"></div>
+                        <div class="image-layer" style="background-image: url(images/resource/special.webp);"></div>
+                        <div class="image"><img src="images/resource/special.webp" alt="image"></div>
                     </div>
                 </div>
 
