--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
                     <div class="inner-box wow fadeInUp" data-wow-duration="1500ms" data-wow-delay="600ms">
                         <div class="image-box"><img src="images/resource/why3.jpg" alt=""></div>
                         <div class="over-box">
-                            <h6>Frisk atmosfære</h6>
+                            <h6>LUN OG STEMNINGSFULL</h6>
                         </div>
                     </div>
                 </div>
@@ -543,7 +543,7 @@
                         <div class="inner clearfix">
                             <!-- <div class="fact-count"><div class="count-box"><span class="count-text" data-stop="135" data-speed="1000">0</span><i>+</i></div></div> -->
                             <!-- <div class="fact-title">hemmelig oppskrift</div> -->
-                            <p> Vår restaurant tilbyr en frisk, ren og innbydende atmosfære hvor du kan slappe av og nyte måltidet ditt. </p>
+                            <p> Vår restaurant byr på en varm og elegant atmosfære med myk belysning og gjennomtenkt design, perfekt for hyggelige samtaler og avslappende måltider. </p>
                         </div>
                     </div>
                     <div class="fact-block col-lg-3 col-md-6 col-sm-6 col-xs-12">
