book a table image updated

--- a/index.html
+++ b/index.html
@@ -652,8 +652,8 @@
                     </div>
                     <div class="graphic-col col-lg-6 col-md-12 col-sm-12">
                         <div class="inner">
-                            <div class="graphic-layer" style="background-image: url(images/background/reservation-bg.jpg);"></div>
-                            <div class="image"><img src="images/background/reservation-bg.jpg" alt="image"></div>
+                            <div class="graphic-layer" style="background-image: url(images/background/bookatable.webp);"></div>
+                            <div class="image"><img src="images/background/bookatable.webp" alt="image"></div>
 
                         </div>
                     </div>
